; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/panel/extr_panel.c_lcd_print.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/panel/extr_panel.c_lcd_print.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@lcd_addr_x = common dso_local global i64 0, align 8
@lcd_bwidth = common dso_local global i64 0, align 8
@lcd_char_conv = common dso_local global i8* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8)* @lcd_print to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @lcd_print(i8 signext %0) #0 {
  %2 = alloca i8, align 1
  store i8 %0, i8* %2, align 1
  %3 = load i64, i64* @lcd_addr_x, align 8
  %4 = load i64, i64* @lcd_bwidth, align 8
  %5 = icmp slt i64 %3, %4
  br i1 %5, label %6, label %20

6:                                                ; preds = %1
  %7 = load i8*, i8** @lcd_char_conv, align 8
  %8 = icmp ne i8* %7, null
  br i1 %8, label %9, label %15

9:                                                ; preds = %6
  %10 = load i8*, i8** @lcd_char_conv, align 8
  %11 = load i8, i8* %2, align 1
  %12 = zext i8 %11 to i64
  %13 = getelementptr inbounds i8, i8* %10, i64 %12
  %14 = load i8, i8* %13, align 1
  store i8 %14, i8* %2, align 1
  br label %15

15:                                               ; preds = %9, %6
  %16 = load i8, i8* %2, align 1
  %17 = call i32 @lcd_write_data(i8 signext %16)
  %18 = load i64, i64* @lcd_addr_x, align 8
  %19 = add nsw i64 %18, 1
  store i64 %19, i64* @lcd_addr_x, align 8
  br label %20

20:                                               ; preds = %15, %1
  %21 = load i64, i64* @lcd_addr_x, align 8
  %22 = load i64, i64* @lcd_bwidth, align 8
  %23 = icmp eq i64 %21, %22
  br i1 %23, label %24, label %26

24:                                               ; preds = %20
  %25 = call i32 (...) @lcd_gotoxy()
  br label %26

26:                                               ; preds = %24, %20
  ret void
}

declare dso_local i32 @lcd_write_data(i8 signext) #1

declare dso_local i32 @lcd_gotoxy(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
